--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,8 +1,7 @@
-[package]
-name = "pembantu_ai"
-version = "0.1.0"
-edition = "2021"
+[workspace]
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
-
-[dependencies]
+members = [
+    "crates/pembantu_core",
+    "crates/pembantu_telegram",
+    "crates/pembantu_whatsapp",
+]
