feat: basic openrouter api

--- a/crates/pembantu_telegram/Cargo.toml
+++ b/crates/pembantu_telegram/Cargo.toml
@@ -10,3 +10,6 @@ teloxide = { version = "0.12", features = ["macros"] }
 log = "0.4"
 pretty_env_logger = "0.4"
 tokio = { version =  "1.8", features = ["rt-multi-thread", "macros"] }
+dotenv = "0.15.0"
+actix-rt = "2.9.0"
+pembantu_core = { path = "../pembantu_core" }
