--- a/crates/pembantu_core/Cargo.toml
+++ b/crates/pembantu_core/Cargo.toml
@@ -11,3 +11,4 @@ async-trait = "0.1.77"
 dotenv = "0.15.0"
 reqwest = { version = "0.11.23", features = ["blocking", "json"]}
 serde = { version = "1.0.195", features = ["derive"] }
+thiserror = "1.0.56"
