--- a/crates/pembantu_telegram/Cargo.toml
+++ b/crates/pembantu_telegram/Cargo.toml
@@ -13,3 +13,4 @@ tokio = { version =  "1.8", features = ["rt-multi-thread", "macros"] }
 dotenv = "0.15.0"
 actix-rt = "2.9.0"
 pembantu_core = { path = "../pembantu_core" }
+serde_json = "1.0.112"
