--- a/crates/pembantu_core/Cargo.toml
+++ b/crates/pembantu_core/Cargo.toml
@@ -9,6 +9,7 @@ edition = "2021"
 actix-rt = "2.9.0"
 async-trait = "0.1.77"
 dotenv = "0.15.0"
+dyn-clone = "1.0.16"
 reqwest = { version = "0.11.23", features = ["blocking", "json"]}
 serde = { version = "1.0.195", features = ["derive"] }
 thiserror = "1.0.56"
