refactor: add support for multiple providers and image

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,8 @@
 TELOXIDE_TOKEN=
 OPENROUTER_API=
-RUST_LOG=
+RUST_LOG=DEBUG
 BOT_USERNAME=
-AI_MODEL=
+PROVIDER_TEXT_GENERATION=
+PROVIDER_IMAGE_GENERATION=
+MODEL_IMAGE_GENERATION=
+MODEL_TEXT_GENERATION=google/gemini-2.0-flash-001
