--- a/crates/pembantu_core/Cargo.toml
+++ b/crates/pembantu_core/Cargo.toml
@@ -12,4 +12,5 @@ dotenv = "0.15.0"
 dyn-clone = "1.0.16"
 reqwest = { version = "0.11.23", features = ["blocking", "json"]}
 serde = { version = "1.0.195", features = ["derive"] }
+serde_json = "1.0.140"
 thiserror = "1.0.56"
