--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,16 @@
+# REQUIRED
 TELOXIDE_TOKEN=
-OPENROUTER_API=
-RUST_LOG=DEBUG
 BOT_USERNAME=
-PROVIDER_TEXT_GENERATION=
-PROVIDER_IMAGE_GENERATION=
-MODEL_IMAGE_GENERATION=
-MODEL_TEXT_GENERATION=google/gemini-2.0-flash-001
+RUST_LOG=DEBUG
+
+# Image Generation
+PROVIDER_IMAGE_GENERATION=gemini
+MODEL_IMAGE_GENERATION=gemini-2.0-flash-preview-image-generation
+
+# Text Generation
+PROVIDER_TEXT_GENERATION=gemini
+MODEL_TEXT_GENERATION=gemini-2.0-flash
+
+# Provider API Keys
+OPENROUTER_API_KEY=
+GEMINI_API_KEY=AIzaSyCtbgGboWQeVmz3gfOKl-Jn4iFWBaGz5Ng
