--- a/crates/pembantu_telegram/Cargo.toml
+++ b/crates/pembantu_telegram/Cargo.toml
@@ -21,4 +21,4 @@ pembantu_core = { path = "../pembantu_core" }
 serde_json = "1.0.112"
 envy = "0.4.2"
 serde = "1.0.219"
-secrecy = "0.10.3"
+secrecy = { version = "0.10.3", features = ["serde"] }
