fix: non-400 error and improve logging

--- a/crates/pembantu_telegram/Cargo.toml
+++ b/crates/pembantu_telegram/Cargo.toml
@@ -12,7 +12,7 @@ path = "src/main.rs"
 
 [dependencies]
 teloxide = { version = "0.15", features = ["macros"] }
-log = "0.4"
+log = { workspace = true }
 pretty_env_logger = "0.4"
 tokio = { version =  "1.8", features = ["rt-multi-thread", "macros"] }
 dotenv = "0.15.0"
