--- a/crates/pembantu_core/Cargo.toml
+++ b/crates/pembantu_core/Cargo.toml
@@ -15,3 +15,4 @@ reqwest = { version = "0.11.23", features = ["blocking", "json"]}
 serde = { version = "1.0.195", features = ["derive"] }
 serde_json = "1.0.140"
 thiserror = "1.0.56"
+log = { workspace = true }
